@@ -50,7 +50,6 @@ else {
 	print "<tr>";
 	print "	<th>"._('User')."</th>";
 	print "	<th>"._('Subnet')."</th>";
-	print "	<th>"._('Description')."</th>";
 	print "	<th>"._('Action')."</th>";
 	print "	<th>"._('Result')."</th>";
 	print "	<th>"._('Date')."</th>";
@@ -63,16 +62,19 @@ else {
 		# format diff
 		$l['cdiff'] = str_replace("\n", "<br>", $l['cdiff']);
 
+		# set class for badge
+		if($l['cresult']=="success") { $bclass='alert-success'; }
+		else 						 { $bclass='alert-danger'; }
+
 		print "<tr>";
 		print "	<td>$l[real_name]</td>";
 		# folder?
 		if($subnet['isFolder']==1)			{ print "	<td><a href='".create_link("subnets",$GET->section,$GET->subnetId)."'>$subnet[description]</a></td>"; }
 		else 								{ print "	<td><a href='".create_link("subnets",$GET->section,$GET->subnetId)."'>$subnet[ip]/$subnet[mask]</a></td>"; }
-		print "	<td>$l[description]</td>";
-		print "	<td>"._("$l[caction]")."</td>";
-		print "	<td>"._("$l[cresult]")."</td>";
-		print "	<td>$l[cdate]</td>";
-		print "	<td>$l[cdiff]</td>";
+		print "	<td><span class='badge badge1 badge5'>"._(ucwords($l['caction']))."</span></td>";
+		print "	<td><span class='badge badge1 badge5 $bclass'>"._(ucwords("$l[cresult]"))."</span></td>";
+		print "	<td class='text-muted'>$l[cdate]</td>";
+		print "	<td><p style='background: rgba(0,0,0,0.1); padding:10px 20px;border-radius:4px;margin-bottom:0px;'>$l[cdiff]</p></td>";
 		print "</tr>";
 
 	}
