@@ -52,7 +52,6 @@ else {
 	print "<thead>";
 	print "<tr>";
 	print "	<th>"._('User')."</th>";
-	print "	<th>"._('Type')."</th>";
 	print "	<th>"._('Object')."</th>";
 	print "	<th>"._('Action')."</th>";
 	print "	<th>"._('Result')."</th>";
@@ -76,45 +75,9 @@ else {
 		# printout
 		if($permission > 0)	{
 			# format diff
-    		$changelog = str_replace("\r\n", "<br>",$l['cdiff']);
-    		$changelog = str_replace("\n", "<br>",$changelog);
-    		$changelog = array_filter(pf_explode("<br>", $changelog));
-
-            $diff = array();
-
-    		foreach ($changelog as $c) {
-        		// type
-        		switch ($l['ctype']) {
-            		case "ip_addr" :
-            		    $type = "address";
-            		    break;
-            		case "ip_range" :
-            		    $type = "address";
-            		    break;
-            		case "folder" :
-            		    $type = "subnet";
-            		    break;
-                    default :
-                        $type = $l['ctype'];
-        		}
-
-        		// field
-        		$field = array_pad(explode(":", $c), 2 , '');
-        	    $value = array_pad(explode("=>", $field[1]), 2, '');
-
-        	    $field = trim(str_replace(array("[","]"), "", $field[0]));
-        	    if(is_array(@$Log->changelog_keys[$type])) {
-            	    if (array_key_exists($field, $Log->changelog_keys[$type])) {
-                	    $field = $Log->changelog_keys[$type][$field];
-            	    }
-        	    }
-
-        		$diff_1  = "<strong>$field</strong>: ".trim($value[0]);
-        		if($l['caction']=="edit")
-        		$diff_1 .= "  => ".trim($value[1]);
-
-        		$diff[] = $diff_1;
-    		}
+    		$l['cdiff'] = str_replace("\n", "<br>",$l['cdiff']);
+    		$l['cdiff'] = str_replace("[", "[<strong>", $l['cdiff']);
+    		$l['cdiff'] = str_replace("]", "</strong>]", $l['cdiff']);
 
 			# format type
 			switch($l['ctype']) {
@@ -122,38 +85,40 @@ else {
 				case "subnet":  if($l['isFolder']==1) 	{ $l['ctype'] = "Folder"; }
 								else 					{ $l['ctype'] = "Subnet"; }
 				break;
-
 				case "section":	$l['ctype'] = "Section";	break;
 			}
 
+			# set class for badge
+			if($l['cresult']=="success") { $bclass='alert-success'; }
+			else 						 { $bclass='alert-danger'; }
+
 			print "<tr>";
 			print "	<td>$l[real_name]</td>";
-			print "	<td>$l[ctype]</td>";
 
 			# subnet, section or ip address
 			if(is_blank($l['tid'])) {
 				print "<td><span class='badge badge1 badge5 alert-danger'>"._("Deleted")."</span></td>";
 			}
 			elseif($l['ctype']=="IP address")	{
-				print "	<td><a href='".create_link("subnets",$l['sectionId'],$l['subnetId'],"address-details",$l['tid'])."'>".$Subnets->transform_address($l['ip_addr'],"dotted")."</a></td>";
+				print "	<td><a href='".create_link("subnets",$l['sectionId'],$l['subnetId'],"address-details",$l['tid'])."'>".$Subnets->transform_address($l['ip_addr'],"dotted")."</a><br><span class='text-muted'>$l[ctype]</span></td>";
 			}
 			elseif($l['ctype']=="Subnet")   {
-				print "	<td><a href='".create_link("subnets",$l['sectionId'],$l['tid'])."'>".$Subnets->transform_address($l['ip_addr'],"dotted")."/$l[mask]</a></td>";
+				print "	<td><a href='".create_link("subnets",$l['sectionId'],$l['tid'])."'>".$Subnets->transform_address($l['ip_addr'],"dotted")."/$l[mask]</a><br><span class='text-muted'>$l[ctype]</span></td>";
 			}
 			elseif($l['ctype']=="Folder")   {
-				print "	<td><a href='".create_link("folder",$l['sectionId'],$l['tid'])."'>$l[sDescription]</a></td>";
+				print "	<td><a href='".create_link("folder",$l['sectionId'],$l['tid'])."'>$l[sDescription]</a><br><span class='text-muted'>$l[ctype]</span></td>";
 			}
 			elseif($l['ctype']=="Section")   {
-				print "	<td><a href='".create_link("subnets",$l['tid'])."'>".$l['ip_addr']."</a></td>";
+				print "	<td><a href='".create_link("subnets",$l['tid'])."'>".$l['ip_addr']."</a><br><span class='text-muted'>$l[ctype]</span></td>";
 			}
 			else {
 				print "	<td></td>";
 			}
 
-			print "	<td>"._("$l[caction]")."</td>";
-			print "	<td>"._("$l[cresult]")."</td>";
-			print "	<td>$l[cdate]</td>";
-			print "	<td>".implode("<br>", $diff)."</td>";
+			print "	<td><span class='badge badge1 badge5'>"._(ucwords($l['caction']))."</span></td>";
+			print "	<td><span class='badge badge1 badge5 $bclass'>"._(ucwords("$l[cresult]"))."</span></td>";
+			print "	<td class='text-muted'>$l[cdate]</td>";
+			print "	<td><p style='background: rgba(0,0,0,0.1); padding:10px 20px;border-radius:4px;margin-bottom:0px;'>".$l['cdiff']."</p></td>";
 			print "</tr>";
 		}
 	}
